--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>nl.hsac</groupId>
 	<artifactId>hsac-fitnesse-fixtures</artifactId>
-	<version>1.10-SNAPSHOT</version>
+	<version>1.10.4</version>
 	<url>https://github.com/fhoeben/hsac-fitnesse-fixtures</url>
 	<name>HSAC's FitNesse Fixtures</name>
 	<description>Fixtures to assist in testing via FitNesse</description>
@@ -39,6 +39,12 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<!-- classpath that Fitnesse uses when not starting from IDE/maven -->
+
+		<selenium.version>2.45.0</selenium.version>
+		<xebium.version>0.12</xebium.version>
+		<hsac.version>1.10.4</hsac.version>
+
+		<fitnesse.version>20150424</fitnesse.version>
 		<standalone.classpath>wiki/fixtures</standalone.classpath>
 		<fitnesse.port>9090</fitnesse.port>
 	</properties>
@@ -46,7 +52,64 @@
 		<dependency>
 			<groupId>org.fitnesse</groupId>
 			<artifactId>fitnesse</artifactId>
-			<version>20150424</version>
+			<version>${fitnesse.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>nl.hsac</groupId>
+			<artifactId>hsac-fitnesse-fixtures</artifactId>
+			<version>${hsac.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>nl.hsac</groupId>
+			<artifactId>hsac-xebium-bridge</artifactId>
+			<version>0.1.0</version>
+		</dependency>
+
+		<!-- For Xebium -->
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-remote-driver</artifactId>
+			<version>${selenium.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.xebia.incubator</groupId>
+			<artifactId>xebium</artifactId>
+			<version>${xebium.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>*</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>commons-lang</groupId>
+					<artifactId>*</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.github.detro.ghostdriver</groupId>
+					<artifactId>phantomjsdriver</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.seleniumhq.selenium</groupId>
+					<artifactId>selenium-server</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.seleniumhq.selenium</groupId>
+					<artifactId>selenium-api</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.seleniumhq.selenium</groupId>
+					<artifactId>selenium-remote-driver</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>com.opera</groupId>
+					<artifactId>operadriver</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.fitnesse.plugins</groupId>
+					<artifactId>maven-classpath-plugin</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<dependency>
